--- a/kb.html
+++ b/kb.html
@@ -96,12 +96,14 @@ All rights reserved.
 		<button type="button" class="btn btn-default" ng-class="{disabled:!canCopy()}" ng-click="copy()"><i class="fa fa-copy"></i> Copy</button>
 		<button type="button" class="btn btn-default" ng-class="{disabled:!canPaste()}" ng-click="paste()"><i class="fa fa-paste"></i> Paste</button>
 	</div>
+  <input id="fancySvg" type="checkbox" ng-model="fancySvg" ng-disabled="renderSvg == false"><label class="checkbox-label" for="fancySvg">Fancy holes</label>
 	<div class="btn-group pull-right">
-    <div class="btn-group">
-      <button type="button" class="btn btn-success" ng-class="{disabled:!canSave()}" ng-click="save()"><i class="fa fa-save"></i> Save</button>
-    </div>
+
     <div class="btn-group">
       <button type="button" class="btn btn-default" ng-click="renderSvg = !renderSvg">SVG</button>
+    </div>
+    <div class="btn-group">
+      <button type="button" class="btn btn-success" ng-class="{disabled:!canSave()}" ng-click="save()"><i class="fa fa-save"></i> Save</button>
     </div>
   </div>
 	<div id="keyboard" 
@@ -149,7 +151,7 @@ All rights reserved.
 		</div>
   </div>
 
-  <svg width="1000" height="1000" ng-show="renderSvg">
+  <svg width="1000" height="400" ng-show="renderSvg" viewBox="0 0 500 200">
     <g ng-repeat="key in keys()" 
 			 ng-mouseover="hoveredKey=key" 
 			 ng-mouseleave="hoveredKey=null" 
