add outline hiding

--- a/kb.html
+++ b/kb.html
@@ -97,6 +97,7 @@ All rights reserved.
 		<button type="button" class="btn btn-default" ng-class="{disabled:!canPaste()}" ng-click="paste()"><i class="fa fa-paste"></i> Paste</button>
 	</div>
   <input id="fancySvg" type="checkbox" ng-model="fancySvg" ng-disabled="renderSvg == false"><label class="checkbox-label" for="fancySvg">Fancy holes</label>
+  <input id="showKeyOutlines" type="checkbox" ng-model="showKeyOutlines" ng-disabled="renderSvg == false"><label class="checkbox-label" for="showKeyOutlines">Show keys</label>
 	<div class="btn-group pull-right">
 
     <div class="btn-group">
