--- a/kb.html
+++ b/kb.html
@@ -49,7 +49,7 @@ Forked from keyboard-layout-editor by Ian Prest
 				<li>Layouts</li>
 				<li ng-repeat="(k,v) in layouts"><a ng-click="loadKeyset(v)" href="#">{{k}}</a></li> <!-- Should be loadLayout(v) -->
 				<li class="divider" ng-class="{hidden: !specialKeys}"></li>
-				<li>Keysets</li>
+				<li>Keysets (keycaps)</li>
 				<li ng-repeat="(k,v) in keysets"><a ng-click="loadKeyset(v)" href="#">{{k}}</a></li>
 			</ul>
 		</li>
