Add new file save button

--- a/kb.html
+++ b/kb.html
@@ -98,6 +98,7 @@ Forked from keyboard-layout-editor by Ian Prest
 		<button type="button" class="btn btn-default" ng-class="{disabled:!canPaste()}" ng-click="paste()"><i class="fa fa-paste"></i> Paste</button>
 	</div>
 	<div class="btn-group pull-right">
+		<button type="button" class="btn btn-success" ng-click="saveFile()"><i class="fa fa-save"></i> Save File</button>
 		<button type="button" class="btn btn-success" ng-class="{disabled:!canSave()}" ng-click="save()"><i class="fa fa-save"></i> Save</button>
 	</div>
 	<div id="keyboard"
