--- a/kb.html
+++ b/kb.html
@@ -147,7 +147,7 @@ Forked from keyboard-layout-editor by Ian Prest
   <input id="showKeyOutlines" type="checkbox" ng-model="showKeyOutlines" ng-disabled="renderSvg == false"><label class="checkbox-label" for="showKeyOutlines">Show keys</label>
   <div class="btn-group pull-right">
     <div class="btn-group">
-      <button type="button" class="btn btn-default" ng-click="renderSvg = !renderSvg">SVG (flakey in FF?)</button>
+      <button type="button" class="btn btn-default" ng-click="renderSvg = !renderSvg">SVG</button>
     </div>
     <div class="btn-group">
       <button type="button" class="btn btn-success" ng-click="saveFile()"><i class="fa fa-save"></i> Save File</button>
