Update copyright date.

--- a/kb.html
+++ b/kb.html
@@ -1,6 +1,6 @@
 <!-- 
 KEYBOARD LAYOUT EDITOR
-Copyright (C) 2013  Ian Prest
+Copyright (C) 2013-2015 Ian Prest
 All rights reserved.
 -->
 <!DOCTYPE html>
@@ -356,7 +356,7 @@ All rights reserved.
 <div class="container">
 	<p class="text-muted credit" style="float:left">
 		Keyboard Layout Editor v{{version}}<br/>
-		Copyright &copy; 2013 &mdash; Ian Prest<br/>
+		Copyright &copy; 2013-2015 &mdash; Ian Prest<br/>
 		All rights reserved.
 	</p>
 	<div style="float:right; text-alignment:right;">
