Make F1 show the help screen

--- a/kb.html
+++ b/kb.html
@@ -30,6 +30,7 @@ All rights reserved.
 	 ng-mouseup="selectRelease($event)" 
 	 ng-mousemove="selectMove($event)"
 	 ui-keydown="{'shift-191' : 'showHelp($event)',
+          112 : 'showHelp($event)',
 	 			  'ctrl-83' : 'save($event)' }">
 <div id="wrap">
 <nav class="navbar navbar-inverse navbar-static-top" role="navigation">	
