--- a/kb.html
+++ b/kb.html
@@ -22,6 +22,7 @@ All rights reserved.
 <script type="text/javascript" src="js/jsonl.min.js"></script>
 <script type="text/javascript" src="js/color.js"></script>
 <script type="text/javascript" src="js/marked.min.js"></script>
+<script type="text/javascript" src="js/FileSaver.min.js"></script>
 <script type="text/javascript" src="extensions.js"></script>
 <script type="text/javascript" src="render.js"></script>
 <script type="text/javascript" src="serial.js"></script>
@@ -334,7 +335,14 @@ All rights reserved.
 		<!-- RAW DATA EDITOR -->
 		<div ng-class="{hidden:selTab!=2}" class="col-md-12">
 			<textarea id="rawdata" spellcheck="false" ng-model="serialized" ng-change="updateFromSerialized()" ng-class="{error:deserializeException!==''}"></textarea>
-      <div style='text-align:right;'><a href="https://github.com/ijprest/keyboard-layout-editor/wiki/Serialized-Data-Format" target='_blank'><i class="fa fa-question-circle"></i> Raw Data Syntax</a></div>
+      <div style='text-align:right;margin-top:4px;'>
+        <div class="btn-group btn-group-xs" role="group">
+          <button type="button" class="btn btn-primary" ng-click="downloadJson()"><i class="fa fa-download"></i> Download as JSON</button>
+        </div>
+        <div class="btn-group btn-group-xs" role="group">
+          <a class="btn btn-primary" href="https://github.com/ijprest/keyboard-layout-editor/wiki/Serialized-Data-Format" target='_blank'><i class="fa fa-question-circle"></i> Raw Data Syntax</a>
+        </div>
+      </div>
 			<div id="rawdata-error" class="alert alert-danger" style='margin-top:1em;margin-bottom:0px' ng-class="{hidden:!deserializeException}">{{deserializeException}}</div>
 		</div>
 	</div>	
